tooling/nargo_cli/tests/snapshots/execution_success/brillig_uninitialized_arrays/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: Field) -> pub Field {
    // Safety: comment added by `nargo expand`
    unsafe {
        let notes: [Field; 2] = create_notes(x, y);
        sum_x(notes, x, y)
    }
}

fn sum_x(notes: [Field; 2], x: Field, y: Field) -> Field {
    notes[x] + notes[y]
}

unconstrained fn create_notes(x: Field, y: Field) -> [Field; 2] {
    [x, y]
}
